# skizze

./: .dockerignore  .editorconfig  .env.example  .env.local.example  .env.test.example  .gitignore  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
app/: main.py
app/api/: deps.py
app/api/v1/: api.py  auth.py  users.py
app/core/: config.py  logging_config.py  security.py
app/db/: db_pre_start.py  session.py
app/models/: base_class.py  mixins.py  models.py
app/schemas/: __init__.py  base_class.py  token.py  user.py
app/services/: crud_base.py  user_service.py
app/tests/: authentication.py  conftest.py  constants.py  test_auth.py  test_users.py
docker/: Dockerfile
